Assembly Browser: Changed 'Navigate' label to 'Jump', zooming does not require Ctrl anymore

--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -72,7 +72,7 @@
                                     MinHeight="0"
                                     Background="{StaticResource RightArrowBlueDrawing}"
                                     Style="{StaticResource ImageButtonStyle}"
-                                    ToolTip="Navigate"/>
+                                    ToolTip="Jump"/>
 
                             <Button VerticalAlignment="Center"                                                                      
                                     Command="{Binding VisualizeCommand}" 
