--- a/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
@@ -2,8 +2,7 @@
         x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"         
-        xmlns:UserControls="clr-namespace:ILSpyVisualizer.AssemblyBrowser.UserControls" 
-        Title="{Binding Title}" 
+        xmlns:UserControls="clr-namespace:ILSpyVisualizer.AssemblyBrowser.UserControls" xmlns:Screens="clr-namespace:ILSpyVisualizer.AssemblyBrowser.Screens" Title="{Binding Title}" 
         Height="600" 
         Width="800" 
         MinWidth="800"
@@ -36,14 +35,12 @@
           TextOptions.TextFormattingMode="Display">      
 
         <!--Content-->  
-        <UserControls:CachingScreenPresenter Screen="{Binding Screen}"
-                                             Grid.Row="1"/>
-
-        <!--Commands-->
-        <UserControls:CommandsView HorizontalAlignment="Center"
-                                   VerticalAlignment="Top"
-                                   DataContext="{Binding Screen.Commands}"
-                                   Margin="4"/>
+        <UserControls:ScreenPresenter Screen="{Binding Screen}"
+                                             Grid.Row="1">
+            <UserControls:ScreenPresenter.SearchView>
+                <Screens:SearchScreenView DataContext="{Binding SearchScreen}"/>
+            </UserControls:ScreenPresenter.SearchView>
+        </UserControls:ScreenPresenter>        
         
         <!--Navigation arrows-->
         <Grid Visibility="{Binding ShowNavigationArrows, Converter={StaticResource BooleanToVisibilityConverter}}"
