Ancestry Browser: UI implementation

--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -3,8 +3,8 @@
                     xmlns:ViewModels="clr-namespace:ILSpyVisualizer.AssemblyBrowser.ViewModels">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ImagesDictionary.xaml"/>
-        <ResourceDictionary Source="ControlStylesDictionary.xaml"/>
-        <ResourceDictionary Source="../../Common/DataTemplatesDictionary.xaml"/>
+        <ResourceDictionary Source="..\..\Common\ControlStylesDictionary.xaml"/>
+        <ResourceDictionary Source="..\..\Common\DataTemplatesDictionary.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
