--- a/sources/ILSpyVisualizer/AncestryBrowser/AncestryBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AncestryBrowser/AncestryBrowserWindow.xaml
@@ -3,11 +3,11 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:AncestryBrowser="clr-namespace:ILSpyVisualizer.AncestryBrowser"
-	Title="{Binding Name}" Height="300" Width="300">
+	Title="{Binding Name}" Height="800" Width="800">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Common/DataTemplatesDictionary.xaml" />
+                <ResourceDictionary Source="..\Common\DataTemplatesDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type AncestryBrowser:TypeViewModel}">
@@ -17,18 +17,33 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <TextBlock Text="{Binding Name}"/>
-                    <ItemsControl ItemsSource="{Binding Members}"
-                                  Grid.Row="1"/>
-                    <ContentControl Content="{Binding BaseType}"
-                                    Grid.Row="2"/>
+                    <TextBlock Text="{Binding Name}"
+                               FontSize="16"
+                               FontWeight="Bold"
+                               Margin="25, 0, 0, 0"/>
+                    <Expander IsExpanded="{Binding IsExpanded}">
+                        <ItemsControl ItemsSource="{Binding Members}"
+                                      Grid.Row="1"/>
+                    </Expander>
+                    <Border Grid.Row="2"
+                            BorderThickness="0, 2, 0, 0"
+                            BorderBrush="#888888">
+                        <ContentControl Content="{Binding BaseType}"/>
+                    </Border>
                 </Grid>
             </DataTemplate>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid>
+    <Grid UseLayoutRounding="True"
+          TextOptions.TextFormattingMode="Display">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <ContentControl Content="{Binding Type}"/>
         </ScrollViewer>
+        
+        
     </Grid>
 </Window>
