--- a/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
@@ -2,7 +2,9 @@
         x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"         
-        xmlns:UserControls="clr-namespace:ILSpyVisualizer.AssemblyBrowser.UserControls" xmlns:Screens="clr-namespace:ILSpyVisualizer.AssemblyBrowser.Screens" Title="{Binding Title}" 
+        xmlns:UserControls="clr-namespace:ILSpyVisualizer.AssemblyBrowser.UserControls" 
+        xmlns:Screens="clr-namespace:ILSpyVisualizer.AssemblyBrowser.Screens" 
+        Title="{Binding Title}" 
         Height="600" 
         Width="800" 
         MinWidth="800"
@@ -12,7 +14,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>                
-                <ResourceDictionary Source="Dictionaries\ControlStylesDictionary.xaml"/>
+                <ResourceDictionary Source="..\Common\ControlStylesDictionary.xaml"/>
                 <ResourceDictionary Source="Dictionaries\ImagesDictionary.xaml"/>
 
                 <ResourceDictionary Source="/PresentationFramework.Aero, Version=3.0.0.0,
