--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -3,7 +3,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:UserControls="clr-namespace:ILSpyVisualizer.AssemblyBrowser.UserControls" mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:CommandsGroup="clr-namespace:ILSpyVisualizer.Common.CommandsGroup" mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              Background="White">
     <UserControl.Resources>
@@ -138,7 +139,7 @@
                       Margin="20, 0, 4, 0">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <UserControls:CommandsGroupView Commands="{Binding Commands}"
+                    <CommandsGroup:CommandsGroupView Commands="{Binding Commands}"
                                                     Header="{Binding Header}"
                                                     Margin="0, 4"/>
                 </DataTemplate>
