--- a/sources/ILSpyVisualizer/Common/CommandsGroup/CommandsGroupView.xaml
+++ b/sources/ILSpyVisualizer/Common/CommandsGroup/CommandsGroupView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ILSpyVisualizer.AssemblyBrowser.UserControls.CommandsGroupView"
+﻿<UserControl x:Class="ILSpyVisualizer.Common.CommandsGroup.CommandsGroupView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,7 +9,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="..\Dictionaries\ControlStylesDictionary.xaml"/>
+                <ResourceDictionary Source="..\ControlStylesDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
