--- a/sources/ILSpyVisualizer/AncestryBrowser/AncestryBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AncestryBrowser/AncestryBrowserWindow.xaml
@@ -22,13 +22,57 @@
                                FontWeight="Bold"
                                Margin="25, 0, 0, 0"/>
                     <Expander IsExpanded="{Binding IsExpanded}">
-                        <ItemsControl ItemsSource="{Binding Members}"
-                                      Grid.Row="1"/>
+                        <ListBox ItemsSource="{Binding Members}"
+                                 BorderThickness="0"
+                                 SelectionChanged="ListBox_SelectionChanged">
+                            <ListBox.ItemContainerStyle>
+                                <Style TargetType="{x:Type ListBoxItem}">
+                                    <Setter Property="Margin" Value="1,2,1,1"/>
+                                    <Setter Property="HorizontalAlignment" Value="Stretch" />
+                                    <Setter Property="Background" Value="White" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                                <Grid>
+                                                    <Border Background="{TemplateBinding Background}" />
+                                                    <Border Background="#BEFFFFFF" >
+                                                        <Grid>
+                                                            <Grid.RowDefinitions>
+                                                                <RowDefinition />
+                                                                <RowDefinition />
+                                                            </Grid.RowDefinitions>
+                                                            <Border Margin="2,1,2,0" Grid.Row="0" Background="#57FFFFFF" />
+                                                        </Grid>
+                                                    </Border>
+                                                    <ContentPresenter Margin="8,0" />
+                                                </Grid>
+                                                <ControlTemplate.Triggers>
+                                                    <MultiTrigger>
+                                                        <MultiTrigger.Conditions>
+                                                            <Condition Property="IsMouseOver" Value="True" />
+                                                            <Condition Property="IsSelected" Value="False"/>
+                                                        </MultiTrigger.Conditions>
+                                                        <Setter Property="Background" Value="#3399FF" />
+                                                    </MultiTrigger>
+                                                    <Trigger Property="IsSelected" Value="True">
+                                                        <Setter Property="Background" Value="#2266AA" />
+                                                    </Trigger>
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </ListBox.ItemContainerStyle>
+                        </ListBox>
                     </Expander>
                     <Border Grid.Row="2"
-                            BorderThickness="0, 2, 0, 0"
+                            BorderThickness="0, 1, 0, 0"
                             BorderBrush="#888888">
-                        <ContentControl Content="{Binding BaseType}"/>
+                        <Border 
+                            BorderThickness="0, 1, 0, 0"
+                            BorderBrush="Black">
+                            <ContentControl Content="{Binding BaseType}"/>
+                        </Border>
                     </Border>
                 </Grid>
             </DataTemplate>
